--- a/MIBETerminal/MainWindow.xaml
+++ b/MIBETerminal/MainWindow.xaml
@@ -3,6 +3,12 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <Menu Height="23" HorizontalAlignment="Left" Name="WindowMainMenu" VerticalAlignment="Top" Width="503">
+            <MenuItem Header="File">
+                <MenuItem Header="Quit" Name="QuitItem" />
+            </MenuItem>
+            <MenuItem Header="Edit" />
+            <MenuItem Header="Help" />
+        </Menu>
     </Grid>
 </Window>
