--- a/MIBETerminal/MainWindow.xaml
+++ b/MIBETerminal/MainWindow.xaml
@@ -1,14 +1,50 @@
 ﻿<Window x:Class="MIBETerminal.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="460" Width="677">
+    
+    
     <Grid>
-        <Menu Height="23" HorizontalAlignment="Left" Name="WindowMainMenu" VerticalAlignment="Top" Width="503">
-            <MenuItem Header="File">
-                <MenuItem Header="Quit" Name="QuitItem" />
-            </MenuItem>
-            <MenuItem Header="Edit" />
-            <MenuItem Header="Help" />
-        </Menu>
+        <Grid Name="grid1">
+            <Grid.RowDefinitions>
+                <RowDefinition MinHeight="23" Height="23*" MaxHeight="23" />
+                <RowDefinition Height="46" MinHeight="46" MaxHeight="46" />
+                <RowDefinition Height="300" />
+                <RowDefinition Height="52*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition MinWidth="50" Width="328*" />
+                <ColumnDefinition MinWidth="50" Width="327*" />
+            </Grid.ColumnDefinitions>
+            <Button Content="Button" Height="52" HorizontalAlignment="Left" Margin="28,146,0,0" Name="button1" VerticalAlignment="Top" Width="198" Grid.Column="1" Grid.Row="2" />
+            <TextBox HorizontalAlignment="Stretch" Name="terminalOutputTextBox" VerticalAlignment="Stretch" AcceptsReturn="True" VerticalScrollBarVisibility="Auto" BorderThickness="1" Background="Black" Foreground="Lime" FontSize="16" Margin="0,0,0,6" Grid.Row="2" />
+            <Menu Height="23" HorizontalAlignment="Stretch" Name="WindowMainMenu" VerticalAlignment="Top" Grid.ColumnSpan="2">
+                <MenuItem Header="File">
+                    <MenuItem Header="Quit" Name="QuitItem" Click="QuitItem_Click" />
+                </MenuItem>
+                <MenuItem Header="Edit" />
+                <MenuItem Header="Help" />
+            </Menu>
+            <ToolBarTray Grid.Row="1" Height="46" HorizontalAlignment="Left" Name="toolBarTray1" VerticalAlignment="Top" Width="655" Grid.ColumnSpan="2">
+                <ToolBar Width="150" Height="36" HorizontalAlignment="Left">
+                    <Button Padding="4">
+                        <Button.ContextMenu>
+                            <ContextMenu DataContext="{Binding}" >
+                                <MenuItem Header="New"></MenuItem>
+                                <MenuItem Header="Save"></MenuItem>
+                            </ContextMenu>
+                                         
+                                         
+                            
+                        </Button.ContextMenu> xxx</Button>
+                    <Menu Padding="2"></Menu>
+
+
+                </ToolBar>
+
+
+                    <ToolBar Height="23" HorizontalAlignment="Left" Width="200" />
+            </ToolBarTray>
+        </Grid>
     </Grid>
 </Window>
